# id3lib

./: .gitignore  CMakeLists.txt  CMakeToolchain.win.cmake  ChangeLog  HISTORY.md  README.md  TODO.md  config.h.in  id3lib.pc.in
doc/: id3v2.3.0.txt  index.html.in
doc/man/: id3convert.1  id3cp.1  id3info.1  id3tag.1
examples/: CMakeLists.txt  demo_convert.cpp  demo_convert_options.c  demo_convert_options.h  demo_copy.cpp  demo_copy_options.c  demo_copy_options.h  demo_info.cpp  demo_info_options.c  demo_info_options.h  demo_main.cpp  demo_simple.cpp  demo_tag.cpp  demo_tag_options.c  demo_tag_options.h  example_cwrapper.c  findeng.cpp  findstr.cpp  get_pic.cpp  getopt.c  getopt.h  getopt1.c  id3convert.cpp  id3info.cpp  id3tag.cpp  test_compression.cpp  test_io.cpp
id3com/: id3com.idl
include/: id3.h
include/id3/: field.h  globals.h  helpers.h  id3lib_frame.h  id3lib_streams.h  id3lib_strings.h  io_decorators.h  io_helpers.h  io_strings.h  misc_support.h  reader.h  readers.h  sized_types.h  tag.h  utils.h  writer.h  writers.h
src/: CMakeLists.txt  c_wrapper.cpp  config.h.in  field.cpp  field_binary.cpp  field_def.h  field_impl.h  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  flags.h  frame.cpp  frame_def.h  frame_impl.cpp  frame_impl.h  frame_parse.cpp  frame_render.cpp  globals.cpp  header.cpp  header.h  header_frame.cpp  header_frame.h  header_tag.cpp  header_tag.h  helpers.cpp  io.cpp  io_decorators.cpp  io_helpers.cpp  misc_support.cpp  mp3_header.h  mp3_parse.cpp  readers.cpp  spec.cpp  spec.h  tag.cpp  tag_file.cpp  tag_find.cpp  tag_impl.cpp  tag_impl.h  tag_parse.cpp  (+6 more)
tests/: CMakeLists.txt  test_compression.cpp  test_io.cpp  test_pic.cpp  test_remove.cpp  test_unicode.cpp  test_utils.h
